tests/fixtures/components/invalid-foldable/session.blade.php
@blaze

<div class="message">
    {{ session('message') }}
</div>
